<resources>
    <string name="app_name">మహా భారతం</string>

    <string name="parvam_menu_title">పర్వములు</string>
    <string name="parechayam_menu_title">పరిచయం</string>

    <string name="chapters_menu_title">Chapter</string>

    <string name="share_app_menu_title">Share</string>
    <string name="rate_app_menu_title">Rate my app</string>
    <string name="about_menu_title">About Us</string>
    <string name="load_menu_title">Load Chapters</string>

    <string name="sample_data">"Some data %1$d"</string>

    <string name="home_menu_title">Home</string>
    <string name="criticalcare_bar_menu_title">Critical Care</string>
    <string name="personal_details_menu_title">Personal Details</string>
    <string name="briefcase_menu_title">Brief Case</string>
    <string name="syncnow_menu_title">Sync Now</string>

    <string name="scandocs_title">Scan Docs</string>
    <string name="myreports_title">My Reports</string>
    <string name="otherdocs_title">Other Docs</string>

    <string name="navigation_drawer_open" translatable="false"/>
    <string name="navigation_drawer_close" translatable="false"/>
    <string name="sample_email">sample.user@email.com</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="contact_desc">contact photo</string>
    <string name="desc_list_item_left_icon">desc_list_item_icon</string>
    <string name="image_desc">image_desc</string>
    <string name="some_folder">Some folder</string>
    <string name="sample_name">User Name</string>
    <string name="pop_title">Pop</string>
    <string name="indie_title">Indie</string>
    <string name="rock_title">Rock</string>
    <string name="r8b_title"><![CDATA[R&B]]></string>
    <string name="not_title_set">No title set</string>

</resources>
